--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ngx-image-compress": "^8.0.3",
     "ngx-webcam": "^0.2.2",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
